--- a/css/stayles.css
+++ b/css/stayles.css
@@ -481,6 +481,8 @@ li {
     border: 1px solid rgba(238, 238, 238, 1);
     margin-bottom: 30px;
 
+    position: relative;
+    overflow: hidden;
 }
 
 .projects_li:hover {
@@ -500,10 +502,13 @@ li {
     border: solid 1px;
     border-color: #eeeeee;
 
+
+
 }
 
 .other_descripcion {
     padding: 20px 24px;
+
 }
 
 .tittle_descripcion {
@@ -524,6 +529,28 @@ li {
     line-height: 1.87;
 }
 
+
+.projects_li:hover>.img-text {
+    transform: translateY(-100%);
+}
+
+.img-text {
+    transform: translateY(0);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-weight: 700;
+    background-color: var(--select-color);
+    padding: 32px;
+    transition: transform 0.3s ease;
+    backdrop-filter: blur(3px);
+
+}
 
 /* section projects */
 
