--- a/css/stayles.css
+++ b/css/stayles.css
@@ -87,6 +87,18 @@ svg {
     color: var(--select-color);
 }
 
+.current:active::after {
+    display: inline-block;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 5px;
+    background-color: pink;
+    left: 0;
+    bottom: -1px;
+  }
+
+
 .navigation_links ._link {
     color: var(--descriptions);
     font-weight: 500;
@@ -531,7 +543,7 @@ li {
 
 .projects_li .img-text {
     transform: translateY(+100%);
-    margin-top: ;
+    
 }
 
 .projects_li:hover>.img-text {
