--- a/modal/modal.css
+++ b/modal/modal.css
@@ -8,13 +8,19 @@ body {
 }
 .backdrop {
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.2);
-    height: 1024px;
-    width: 1600px;
     top: 0;
-    transition: all 0.3s ease-in;
-    transform: scale(1);
-}
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    z-index: 1;
+  }
+  
 .modal {
     width: 528px;
     height: 581px;
@@ -24,11 +30,10 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.backdrop.is-hidden {
-    visibility: hidden;
+.is-hidden {
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
-    transform: scale(0);
-}
+  }
 
 
