--- a/css/stayles.css
+++ b/css/stayles.css
@@ -168,7 +168,7 @@ svg {
             rgba(55, 54, 79, 0.5) 39%,
             rgba(26, 25, 56, 0.5) 74%,
             rgba(2, 0, 36, 1) 100%),
-        url(../images/background.jpg);
+        url( https://carlos61gomez.github.io/goit-markup-hw-04/images/background.jpg);
     background-size: cover;
     text-align: center;
 }
